--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--CSS-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
 
 </head>
 
@@ -283,7 +283,7 @@
   </div>
   <div class="site-footer">
     <!--▼ロゴ中央寄せ-->
-    <p>Shin Needs a Playground</p>
+    <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
     <!--▲ロゴ中央寄せ-->
   </div>
   <!--JS-->
@@ -395,7 +395,7 @@
 
   .site-footer p {
     font-family: 'Cinzel', serif;
-    font-size: 24px;
+    font-size: 12px;
     color: #FFFFFF;
     margin-top: auto;
     margin-bottom: auto;
