--- a/second.html
+++ b/second.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
+    <link rel="stylesheet" href="src/stylesheet.css">
 
 
 
@@ -317,8 +318,6 @@
         <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
         <!--▲ロゴ中央寄せ-->
     </div>
-    <!--JS-->
-    <?!= HtmlService.createHtmlOutputFromFile('js').getContent(); ?>
 </body>
 
 </html>
