--- a/second.html
+++ b/second.html
@@ -32,9 +32,8 @@
         <div class="jumbotron">
             <div class="jmb1wrap">
                 <div class="container">
-                    <p class="jmb1">There's something.<br> It's something <br> you have never known. <br> It's something
-                        <br> you
-                        can grab today.
+                    <p class="jmb1">
+
                     </p>
                     <p class="jmb1btn"><a
                             href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=index"
