--- a/second.html
+++ b/second.html
@@ -12,7 +12,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
+    <!-- <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css"> -->
     <link rel="stylesheet" href="src/stylesheet.css">
 
 
@@ -30,7 +30,7 @@
     <div class="contents">
         <!--▼ジャンボトロン-->
         <div class="jumbotron">
-            <div class="jmb1wrap">
+            <div class="jmbwrap">
                 <div class="container">
                     <p class="jmb1">
 
