--- a/second.html
+++ b/second.html
@@ -12,7 +12,10 @@
     <!--CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css"> -->
+    <!--
+        <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
+    -->
+    <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
     <link rel="stylesheet" href="src/stylesheet.css">
 
 
@@ -30,10 +33,10 @@
     <div class="contents">
         <!--▼ジャンボトロン-->
         <div class="jumbotron">
-            <div class="jmbwrap">
+            <div class="jmb0wrap">
                 <div class="container">
                     <p class="jmb1">
-
+                        Something
                     </p>
                     <p class="jmb1btn"><a
                             href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=index"
@@ -49,7 +52,7 @@
                 <p>
             </h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">42 St-Grand Central</h1>
                         <div class="subwaywrap">
@@ -77,7 +80,7 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">Queens&shy;boro Plaza</h1>
                         <div class="subwaywrap">
@@ -105,38 +108,10 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <h1 lang="en">110 St-Cathedral Pkwy</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page3"
-                                class="border_slide_btn">
-                                Read More on Page 3
-                            </a></p>
-                    </div>
-                </div>
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">South Ferry</h1>
                         <div class="subwaywrap">
@@ -165,37 +140,9 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">Chambers Street</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <h1 lang="en"><span>Times Sq-</span><span>42 St</span></h1>
                         <div class="subwaywrap">
                             <div class="subway">
                                 <span class="subway1">M</span>
@@ -224,7 +171,7 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">Court Square</h1>
                         <div class="subwaywrap">
@@ -252,37 +199,9 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="box">
                         <h1 lang="en">Broadway</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <h1 lang="en">59</h1>
                         <div class="subwaywrap">
                             <div class="subway">
                                 <span class="subway1">M</span>
@@ -317,6 +236,7 @@
         <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
         <!--▲ロゴ中央寄せ-->
     </div>
+
 </body>
 
 </html>
