--- a/second.html
+++ b/second.html
@@ -15,7 +15,6 @@
     <!--
         <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
     -->
-    <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
     <link rel="stylesheet" href="src/stylesheet.css">
 
 
@@ -36,11 +35,11 @@
             <div class="jmb0wrap">
                 <div class="container">
                     <p class="jmb1">
-                        Something
+
                     </p>
                     <p class="jmb1btn"><a
                             href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=index"
-                            class="border_slide_btn">Learn More</a></p>
+                            class="border_slide_btn0">Learn More</a></p>
                 </div>
             </div>
         </div>
@@ -52,7 +51,7 @@
                 <p>
             </h2>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">42 St-Grand Central</h1>
                         <div class="subwaywrap">
@@ -75,12 +74,12 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page1"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Read More on Page 1
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">Queens&shy;boro Plaza</h1>
                         <div class="subwaywrap">
@@ -103,7 +102,7 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page2"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Read More on Page 2
                             </a></p>
                     </div>
@@ -111,7 +110,7 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">South Ferry</h1>
                         <div class="subwaywrap">
@@ -135,12 +134,12 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Learn More
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">Chambers Street</h1>
                         <div class="subwaywrap">
@@ -163,7 +162,7 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Learn More
                             </a></p>
                     </div>
@@ -171,7 +170,7 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">Court Square</h1>
                         <div class="subwaywrap">
@@ -194,12 +193,12 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Learn More
                             </a></p>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="box">
                         <h1 lang="en">Broadway</h1>
                         <div class="subwaywrap">
@@ -222,7 +221,7 @@
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn">
+                                class="border_slide_btn1">
                                 Learn More
                             </a></p>
                     </div>
@@ -236,6 +235,11 @@
         <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
         <!--▲ロゴ中央寄せ-->
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!--自作のJS-->
+    <script src="js/8-2-1.js"></script>
 
 </body>
 
