--- a/second.html
+++ b/second.html
@@ -35,20 +35,23 @@
             <div class="jmb0wrap">
                 <div class="container">
                     <p class="jmb1">
-
+                        SSS
                     </p>
-                    <p class="jmb1btn"><a
-                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=index"
-                            class="border_slide_btn0">Learn More</a></p>
+
+                    <div id="page-link">
+                        <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
+                    </div>
                 </div>
             </div>
         </div>
         <!--▲ジャンボトロン-->
         <!--　▼ 3カラム　 -->
         <div class="container">
+            <section id="area-1">
+            </section>
             <h2>
                 <p class="text-center">What's New
-                <p>
+                </p>
             </h2>
             <div class="row">
                 <div class="col-lg-6">
@@ -239,7 +242,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!--自作のJS-->
-    <script src="js/8-2-1.js"></script>
+    <script src="src/8-2-1.js"></script>
 
 </body>
 
