--- a/second.html
+++ b/second.html
@@ -35,7 +35,10 @@
             <div class="jmb0wrap">
                 <div class="container">
                     <p class="jmb1">
-                        SSS
+                        Hello, I'm Shin.<br>Welcome to my page!
+                    </p>
+                    <p class="jmb1btn">
+                        Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
                     </p>
 
                     <div id="page-link">
