--- a/second.html
+++ b/second.html
@@ -53,13 +53,13 @@
             <section id="area-1">
             </section>
             <h2>
-                <p class="text-center">What's New
+                <p class="text-center">About me
                 </p>
             </h2>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-12">
                     <div class="box">
-                        <h1 lang="en">42 St-Grand Central</h1>
+                        <h1 lang="en">Brief Bio</h1>
                         <div class="subwaywrap">
                             <div class="subway">
                                 <span class="subway1">M</span>
@@ -70,46 +70,27 @@
                             </div>
                         </div>
                         <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
+                            Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
+                        <p lang="en">
+                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku University
+                            in 2021, I have been working on studies about one of the jovian icy moons, Europa. My main
+                            target is the energy transportation to Europa through the moon-plasma interaction and the
+                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen atmosphere. I
+                            received a B.S. of Geophysics (2022) together with Tohoku University President Award
+                            (2022).
+                        </p>
+                        <p lang="en">
+                            I'm now working towards master's degree at Graduate School of Science, Tohoku
+                            University.
+                        </p>
+                        <p lang="en">
+                            I was awarded in a national English composition contest for high school student in Japan for
+                            three years in a row.
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page1"
                                 class="border_slide_btn1">
                                 Read More on Page 1
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="box">
-                        <h1 lang="en">Queens&shy;boro Plaza</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page2"
-                                class="border_slide_btn1">
-                                Read More on Page 2
                             </a></p>
                     </div>
                 </div>
@@ -147,7 +128,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="box">
-                        <h1 lang="en">Chambers Street</h1>
+                        <h1 lang="en">Queens&shy;boro Plaza</h1>
                         <div class="subwaywrap">
                             <div class="subway">
                                 <span class="subway1">M</span>
