--- a/second.html
+++ b/second.html
@@ -56,6 +56,7 @@
                 <p class="text-center">About me
                 </p>
             </h2>
+            <div class="image_circle"></div>
             <div class="row">
                 <div class="col-12">
                     <div class="box">
@@ -91,6 +92,60 @@
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page1"
                                 class="border_slide_btn1">
                                 Read More on Page 1
+                            </a></p>
+                    </div>
+                </div>
+            </div> <!-- row -->
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="box">
+                        <h1 lang="en">Research Interests</h1>
+                        <div class="subwaywrap">
+                            <div class="subway">
+                                <span class="subway1">M</span>
+                                <span class="subway1">A</span>
+                                <span class="subway1">Y</span>
+                                <span class="subway1">2</span>
+                                <span class="subway1">3</span>
+                            </div>
+                        </div>
+                        <p lang="en">
+                            Geophysics, and planetary physics. Icy planets and moons. Moon-plasma interaction. Planetary
+                            magnetic fields, planetary magnetospheres.
+                        </p>
+                        <p lang="en"><a
+                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                                class="border_slide_btn1">
+                                Learn More
+                            </a></p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="box">
+                        <h1 lang="en">Queens&shy;boro Plaza</h1>
+                        <div class="subwaywrap">
+                            <div class="subway">
+                                <span class="subway1">M</span>
+                                <span class="subway1">A</span>
+                                <span class="subway1">Y</span>
+                                <span class="subway1">2</span>
+                                <span class="subway1">3</span>
+                            </div>
+                        </div>
+                        <p lang="en">
+                            This feature is usually enabled by default and causes certain characters to adjust
+                            themselves or be
+                            replaced depending on the surrounding context.
+                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
+                            desired.
+                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
+                            ground.
+                        </p>
+                        <p lang="en"><a
+                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                                class="border_slide_btn1">
+                                Learn More
                             </a></p>
                     </div>
                 </div>
