--- a/second.html
+++ b/second.html
@@ -98,7 +98,7 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="box">
                         <h1 lang="en">Research Interests</h1>
                         <div class="subwaywrap">
@@ -121,9 +121,9 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="box">
-                        <h1 lang="en">Queens&shy;boro Plaza</h1>
+                        <h1 lang="en">Education</h1>
                         <div class="subwaywrap">
                             <div class="subway">
                                 <span class="subway1">M</span>
@@ -134,13 +134,8 @@
                             </div>
                         </div>
                         <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
+                            <li>2018 - Atsugi High School, Kanagawa, Japan</li>
+                            <li>2022 - B.S., Geophysics, Tohoku University, Miyagi, Japan</li>
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
