--- a/second.html
+++ b/second.html
@@ -98,7 +98,7 @@
             </div> <!-- row -->
 
             <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-12 col-lg-6">
                     <div class="box">
                         <h1 lang="en">Research Interests</h1>
                         <div class="subwaywrap">
@@ -121,7 +121,7 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 col-lg-6">
+                <div class="col">
                     <div class="box">
                         <h1 lang="en">Education</h1>
                         <div class="subwaywrap">
@@ -136,6 +136,64 @@
                         <p lang="en">
                             <li>2018 - Atsugi High School, Kanagawa, Japan</li>
                             <li>2022 - B.S., Geophysics, Tohoku University, Miyagi, Japan</li>
+                        </p>
+                        <p lang="en"><a
+                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                                class="border_slide_btn1">
+                                Learn More
+                            </a></p>
+                    </div>
+                </div>
+            </div> <!-- row -->
+
+            <div class="row">
+                <div class="col-md-12 col-lg">
+                    <div class="box">
+                        <h1 lang="en">Awards</h1>
+                        <div class="subwaywrap">
+                            <div class="subway">
+                                <span class="subway1">M</span>
+                                <span class="subway1">A</span>
+                                <span class="subway1">Y</span>
+                                <span class="subway1">2</span>
+                                <span class="subway1">3</span>
+                            </div>
+                        </div>
+                        <p lang="en">
+                            <li>2015 - 全英連 第54回全国高等学校生徒英作文コンテスト 優良賞</li>
+                            <li>2016 - 全英連 第55回全国高等学校生徒英作文コンテスト 入選</li>
+                            <li>2017 - 全英連 第56回全国高等学校生徒英作文コンテスト 入選</li>
+                            <li>2021 - 東北大学 青葉理学振興会 令和2年度 青葉理学振興会奨励賞 (Aoba Society for the Promotion of Science Award)
+                            </li>
+                            <li>2022 - 東北大学 総長賞 (Tohoku University President Award)</li>
+                        </p>
+                        <p lang="en"><a
+                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                                class="border_slide_btn1">
+                                Learn More
+                            </a></p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="box">
+                        <h1 lang="en">Special Experiences</h1>
+                        <div class="subwaywrap">
+                            <div class="subway">
+                                <span class="subway1">M</span>
+                                <span class="subway1">A</span>
+                                <span class="subway1">Y</span>
+                                <span class="subway1">2</span>
+                                <span class="subway1">3</span>
+                            </div>
+                        </div>
+                        <p lang="jp">
+                            <li>2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展</li>
+                            <li>2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞</li>
+                            <li>2022 - 令和4年3月東北大学 学士学位記授与式 卒業生副総代</li>
+                            <li>2022 - 東北大学理学部案内2023に寄稿</li>
+                            <li>2022 - 東北大学大学院理学研究科 地球物理学専攻 オープンキャンパス2022</li>
+                            <li>2022 - 仙台市天文台×東北大学大学院理学研究科公開サイエンス講座 2022年度第1回「ワクワク惑星探査 ～行け行け僕らの火星ローバー！～」を運営 (report)
+                            </li>
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
