--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
 
+  <title>Shinnosuke Satoh | Planetary Science</title>
 </head>
 
 <body>
